Tweaking gitignore to ignore some more stuffs.

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,13 @@ bower_components
 /bower_components/
 bower_components
 bower_components/**
-**/css/
+
+
 **/bower_components/
+
+xxx/.sass-cache/
+
+*.DS_Store
+.sass-cache*
+vendor*
+*/cache*
