--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "Upbase": "git@github.com:Upstatement/upbase.git#~0.1.7"
+    "Upbase": "git@github.com:Upstatement/upbase.git#~0.1.7",
+    "twig.js": "~0.7.2"
   }
 }
