--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   ],
   "dependencies": {
     "Upbase": "git@github.com:Upstatement/upbase.git#~0.1.7",
-    "twig.js": "~0.7.2"
+    "twig.js": "~0.7.2",
+    "jquery": "~2.1.1",
+    "underscore": "~1.7.0"
   }
 }
